# Unit_test_sorting

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  init.cmake  main.cpp  toolkit.cpp
algo/: cocktailSort.cpp
src/: data.cpp  main.cpp  testSet.h  tests.h  to_be_sorted.cpp  toolkit.cpp  toolkit.h
src/algo/: algorithm.cpp  algorithm.h  boubleSort.cpp  bubbleSort.cpp  bubbleSort.h  cocktailSort.cpp  cocktailSort.h  insertionSort.cpp  insertionSort.h  mergeSort.cpp  mergeSort.h  selectionSort.cpp  selectionSort.h
src/algo/BubbleSort/: bubbleSort.cpp  bubbleSort.h
src/algo/CocktailSort/: cocktailSort.cpp  cocktailSort.h
src/algo/CountingSort/: countingSort.cpp  countingSort.h
src/algo/InsertionSort/: insertionSort.cpp  insertionSort.h
src/algo/MergeSort/: mergeSort.cpp  mergeSort.h
src/algo/QuickSort/: QuickSort.cpp  QuickSort.h
src/algo/SelectionSort/: selectionSort.cpp  selectionSort.h
